<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
        schematypens="http://www.w3.org/2001/XMLSchema"?>

<package format="3">
  <name>ros2_adafruit_pwmhat_msgs</name>
  <version>0.1.0</version>
  <description>Messages for controlling Adafruit PWM Hat for Raspberry Pi 3</description>

  <maintainer email="misterblue@misterblue.com">Robert Adams</maintainer>

  <license>Apache License 2.0</license>

  <author>Robert Adams</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>builtin_interfaces</build_depend>
  <build_depend>rosidl_default_generators</build_depend>

  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
